[package]
name = "n_poly"
version = "0.1.0"
authors = ["Will Cashman <wcashman1351@gmail.com>"]
edition = "2018"

# [profile.test] 
# opt-level = 3

[dependencies]
cached = "0.11.0"
num-complex = "0.2.4"
log = "0.4.8"
env_logger = "0.7.1"
num-traits = "0.2"
chrono = "0.4"
rand = "0.7"
itertools = "0.8"
generic-array = "0.13.2"
typenum = "1.11.2"
regex = "1.3.5"
