[package]
name = "n_poly"
version = "0.1.0"
authors = ["Will Cashman <wcashman1351@gmail.com>"]
edition = "2018"

# [profile.test] 
# opt-level = 3

[dependencies]
cached = "0.12.0"
num-complex = "0.2.4"
log = "0.4.8"
env_logger = "0.7.1"
num-traits = "0.2"
chrono = "0.4"
rand = "0.7"
itertools = "0.9"
generic-array = "0.14.1"
typenum = "1.12.0"
regex = "1.3.7"
nalgebra = "0.21"
alga = "0.9.3"
alga_derive = "0.9.2"
